--- a/axelor/Dockerfile
+++ b/axelor/Dockerfile
@@ -4,17 +4,16 @@ LABEL maintainer="jacotech <jaco@jaco.tech>"
 RUN set -ex \
     && DEBIAN_FRONTEND=noninteractive apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get upgrade -y \
-    && DEBIAN_FRONTEND=noninteractive apt-get install -y apt-transport-https apt-utils
-RUN set -ex \
-    && DEBIAN_FRONTEND=noninteractive apt-get install -y gnupg lsb_release wget locales
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y apt-transport-https apt-utils gnupg lsb-release wget locales
 
 # update locale
-RUN set -ex && \
-    echo 'en_GB.UTF-8 UTF-8' >> /etc/locale.gen && \
-    echo 'en_US.UTF-8 UTF-8' >> /etc/locale.gen && locale-gen
+RUN set -ex \
+    && echo 'en_GB.UTF-8 UTF-8' >> /etc/locale.gen \
+    && echo 'en_US.UTF-8 UTF-8' >> /etc/locale.gen \
+    && locale-gen
 ENV LANG en_US.utf8
 
-RUN set -ex && \
+RUN set -ex \
     && wget -P /tmp/ http://download.axelor.com/abs/latest/axelor-erp-latest.war \
     && cp /tmp/axelor-erp-latest.war /usr/local/tomcat/webapps/
 
