--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     networks:
       - axelor
     environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=axelor
       - POSTGRES_USER=axelor
+      - POSTGRES_PASSWORD=axelor      
       - PGDATA=/var/lib/postgresql/data
 
   app:
@@ -20,6 +20,8 @@ services:
     restart: unless-stopped
     depends_on:
       - db
+    volumes:
+      - app-config:/usr/local/tomcat/webapps/axelor-erp-latest/WEB-INF/classes/application.properties
     networks:
       - axelor
       - web
@@ -30,7 +32,7 @@ services:
       - VIRTUAL_PORT=8080
    
 volumes:
-  app:
+  app-config:
   db:
 
 networks:
